# snake_rust_wasm-completed

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
www/: index.css  index.html  package.json
www/src/: controller.js  game-manager.js  storage.js  view.js
