[package]
authors = ["Rodion Chachura <geekrodion@gmail.com>"]
edition = "2018"
name = "rust-js-snake-game"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.32"
rand = {version = "0.7.2", features = ["wasm-bindgen"]}
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
